<resources>
    <string name="app_name">智能桌牌</string>

    <string name="loading">加载中...</string>
    <string name="net_exception_tip">网络不给力，请检查网络设置！</string>
    <string name="systembusy">网络塞车了，请稍后重试</string>
    <string name="systemconnectfailed">服务器连接失败，请稍后重试</string>
    <string name="urlfailed">出错了404，请求地址不存在</string>
    <string name="progresserror">程序解析出错</string>
    <string name="systemerror">服务器维护中，请稍后重试</string>
    <string name="no_auth_tip">请求非法，无此权限，请联系管理员</string>
    <string name="app_name_tip">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="session_timeout_error">长时间未操作，请重新登录</string>
    <string name="session_again_error">您的账号在别处登录了，请重新登录</string>
    <string name="system_error">请求会议信息数据异常</string>
    <string name="system_error_tip">请求数据异常</string>
    <string name="network_disconnect">网络异常，请检查网络是否连接</string>
    <string name="app_key_middle">emttbDEhQA==</string>
    <string name="app_key_end">#$%#</string>
    <string name="date_tip">请选择开始日期</string>
    <string name="date_tip1">请选择结束日期</string>
    <string name="send_tip">请先输入内容！</string>

    <string name="system_update">系统升级</string>
    <string name="new_version">检测到最新版本</string>
    <string name="new_version_tip">为了保障您的会议室正常\n使用请及时更新</string>
    <string name="update_desc">更新日志</string>
    <string name="update_later">稍后再说</string>
    <string name="update_now">立即更新</string>
    <string name="update_loading">正在后台更新中</string>
    <string name="update_errorservice">获取服务器更新信息失败</string>
    <string name="dowload_failed">下载新版本失败</string>
    <string name="new_version_now">当前已经是最新版本了</string>
    <string name="download_size">下载文件大小&#8194; </string>
    <string name="download_progress">下载进度&#8194; </string>
    <string name="download_speed">下载速度&#8194; </string>
    <string name="download_success">下载完成</string>
    <string name="need_storage">需要访问手机存储权限！</string>
    <string name="cancel">取消</string>
    <string name="open">开启</string>

    <string name="inputeror">不支持输入表情符号</string>
    <string name="maxlength">你输入的字数已经超过200字限制！</string>
    <string name="publish_comment">发表评论...</string>
    <string name="publish">发表</string>

    <string name="cannot_use_phone">设备暂不能直接拨打电话！</string>
    <string name="cannot_use_msg">设备暂不能直接发送短信！</string>
    <string name="appexception">很抱歉，程序出现异常，将重新启动。</string>
    <string name="qunxianalert1">该功能需要被赋予相应的权限，不开启将无法正常工作！</string>
    <string name="alert_tip_title">美络智能会议提示</string>
    <string name="alert_tip">该应用需要被赋予相应的权限，不开启将无法正常工作！</string>

    <string name="meeting_login">中科美络智能会议管理平台</string>
    <string name="meeting_login_title_en">Zhongke meiluo intelligent meeting management platform</string>
    <string name="meeting_user_name">账号</string>
    <string name="meeting_user_name_hint">请输入用户名或手机号</string>
    <string name="meeting_password">密码</string>
    <string name="meeting_password_hint">请输入密码</string>
    <string name="meeting_login_button">登录</string>
    <string name="meeting_login_remember">记住密码</string>
    <string name="user_name_error">用户名不能为空</string>
    <string name="password_error">密码不能为空</string>
    <string name="login_welcome">欢迎登录</string>
    <string name="login_hint">请输入手机号</string>
    <string name="login_msg_code">获取短信验证码</string>
    <string name="login_msg_code_hint">请输入短信验证码</string>
    <string name="msg_code_error">验证码不能为空</string>
    <string name="msg_code_get_success">验证码发送成功</string>
    <string name="phone_empty_tip">手机号不能为空！</string>
    <string name="meeting_name">会议名称</string>
    <string name="meeting_name_hint">请输入会议名称</string>
    <string name="meeting_date">会议时间</string>
    <string name="meeting_date1">会议时间: </string>
    <string name="meeting_unit">承办单位: </string>
    <string name="meeting_location">会议地点: </string>
    <string name="meeting_under_taker">承办人: </string>
    <string name="meeting_under_taker1">承办人</string>
    <string name="choose_start_date">请选择起始日期</string>
    <string name="choose_end_date">请选择结束日期</string>
    <string name="search">查询</string>
    <string name="get_into">进入</string>
    <string name="agenda">会议议程</string>
    <string name="documentation">文件资料</string>
    <string name="documentation1">会议资料</string>
    <string name="discussion">互动讨论</string>
    <string name="vote">投票表决</string>
    <string name="summary">会议纪要</string>
    <string name="download">下载附件</string>
    <string name="download_fail">下载附件失败！</string>
    <string name="participants">参会人员</string>
    <string name="summary_content">纪要内容</string>
    <string name="attachment">附件</string>
    <string name="welcome">欢迎您,</string>
    <string name="welcome1">欢迎您</string>
    <string name="no_date">暂无数据</string>
    <string name="select_time_over_end">选择的时间不能大于结束时间</string>
    <string name="select_time_before_start">选择的时间不能小于开始时间</string>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="sure">确定</string>
    <string name="dianstr">点</string>
    <string name="fenstr">分</string>
    <string name="alertmsg">请选择大于当前时间30分钟后的时间</string>
    <string name="alertmsg1">请选择大于当前时间</string>
    <string name="alertmsg2">请选择小于当前的月份</string>
    <string name="alertmsg3">请选择72小时之内的时间</string>
    <string name="alertmsg_thrity">请选择30分钟之内的时间</string>
    <string name="alertmsg_content">请选择%1$s分钟之内的时间</string>
    <string name="alertmsg4">请选择小于当前的时间</string>
    <string name="assets_select_time_over_now">选择的时间不能大于当前时间</string>
    <string name="assets_select_time_failure">选择的时间失败</string>

    <!--天气-->
    <string name="weather_hailstone">冰雹</string>
    <string name="weather_frost">冰冻</string>
    <string name="weather_cloudy">多云</string>
    <string name="weather_wind">风</string>
    <string name="weather_thunderstorm">雷雨</string>
    <string name="weather_fine_day">晴</string>
    <string name="weather_fine_sand_flying_up_in_the_air">沙尘</string>
    <string name="weather_fog">雾</string>
    <string name="weather_snow">雪</string>
    <string name="weather_cloudy_day">阴</string>
    <string name="weather_rain">雨</string>
    <string name="weather_rain_and_snow_mixed">雨夹雪</string>

    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="xiaoshi">小时</string>
    <string name="halfdays">半天</string>
    <string name="daystr">天</string>
</resources>
