<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    tools:context=".activity.MeetingListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px104"
        android:paddingLeft="@dimen/space_10dp"
        android:paddingTop="@dimen/dp11_5"
        android:paddingRight="@dimen/space_10dp"
        android:paddingBottom="@dimen/dp11_5"
        android:background="@drawable/login_center_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/meeting_login_button"
            android:textColor="@color/white"
            android:textSize="@dimen/textSP9"
            android:textStyle="bold"
            tools:text="欢迎您,张三" />

        <ImageView
            android:id="@+id/iv_login_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@mipmap/sign_out" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px104"
        android:layout_margin="@dimen/space_10dp"
        android:paddingLeft="@dimen/space_10dp"
        android:paddingTop="@dimen/dp7_5"
        android:paddingRight="@dimen/space_10dp"
        android:paddingBottom="@dimen/dp7_5"
        android:background="@drawable/meeting_item_bg">

        <TextView
            android:id="@+id/tv_meeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/meeting_name"
            android:textColor="@color/white"
            android:textSize="@dimen/textSp7" />

        <EditText
            android:id="@+id/et_meeting_name"
            android:layout_width="@dimen/px330"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px24"
            android:layout_toRightOf="@+id/tv_meeting_name"
            android:background="@drawable/meeting_search_bg"
            android:hint="@string/meeting_name_hint"
            android:text=""
            android:padding="@dimen/px14"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/bc"
            android:textSize="@dimen/textSp8" />

        <TextView
            android:id="@+id/tv_meeting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/marginleft"
            android:layout_toRightOf="@+id/et_meeting_name"
            android:text="@string/meeting_date"
            android:textColor="@color/white"
            android:textSize="@dimen/textSp7" />

        <RelativeLayout
            android:id="@+id/rl_start_date"
            android:layout_width="@dimen/dp108_5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px24"
            android:layout_toRightOf="@+id/tv_meeting_date"
            android:background="@drawable/meeting_search_bg">

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/px14"
                android:text=""
                android:hint="@string/choose_start_date"
                android:textColor="@color/white"
                android:textSize="@dimen/textSp7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px14"
                android:contentDescription="@null"
                android:src="@mipmap/date" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/px10"
            android:layout_height="@dimen/px1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px6"
            android:layout_marginRight="@dimen/px6"
            android:layout_toRightOf="@+id/rl_start_date"
            android:background="@color/c_E4E7ED" />

        <RelativeLayout
            android:id="@+id/rl_end_date"
            android:layout_width="@dimen/dp108_5"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/view_line"
            android:background="@drawable/meeting_search_bg">

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/px14"
                android:hint="@string/choose_end_date"
                android:textColor="@color/white"
                android:textSize="@dimen/textSp7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px14"
                android:contentDescription="@null"
                android:src="@mipmap/date" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/msg_code_bt_bg"
            android:paddingLeft="@dimen/dp10_5"
            android:paddingTop="@dimen/dp5_5"
            android:paddingRight="@dimen/dp10_5"
            android:paddingBottom="@dimen/dp5_5"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/textSp7" />

        <View
            android:layout_width="@dimen/px1"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp2_5"
            android:layout_toLeftOf="@+id/tv_search"
            android:background="@color/c_E4E7ED" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/space_10dp"
        android:layout_marginRight="@dimen/space_10dp" />
</LinearLayout>