<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity1"
    android:background="@mipmap/login_bg">

    <ImageView
        android:id="@+id/iv_login_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sign_out"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/px59"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="243dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/px114"
        android:paddingBottom="@dimen/px114"
        android:paddingLeft="@dimen/px114"
        android:paddingRight="@dimen/px114"
        android:background="@drawable/login_center_bg">
<!--        android:padding="@dimen/px114"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_login_button"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/textSP9"
            android:layout_marginTop="@dimen/space_10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/px60"
            android:background="@drawable/login_edit_bg">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px30"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:hint="@string/login_hint"
                android:paddingTop="@dimen/px24"
                android:paddingBottom="@dimen/px24"
                android:singleLine="true"
                android:textColorHint="@color/bc"
                android:textSize="@dimen/textSp8"
                android:text="18311004536"/>

            <ImageView
                android:id="@+id/iv_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px14"
                android:contentDescription="@null"
                android:src="@mipmap/et_clean"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/px24">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:background="@drawable/login_edit_bg">

                <EditText
                    android:id="@+id/et_auth_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/px30"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    android:hint="@string/login_msg_code_hint"
                    android:paddingTop="@dimen/px24"
                    android:paddingBottom="@dimen/px24"
                    android:singleLine="true"
                    android:textColorHint="@color/bc"
                    android:textSize="@dimen/textSp8" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_get_msg_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login_msg_code"
                android:textColor="@color/white"
                android:textSize="@dimen/textSp8"
                android:background="@drawable/msg_code_bt_bg"
                android:gravity="center"
                android:layout_marginLeft="@dimen/px24"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meeting_login_button"
            android:textColor="@color/white"
            android:textSize="@dimen/textSp8"
            android:background="@drawable/msg_code_bt_bg"
            android:gravity="center"
            android:padding="@dimen/px24"
            android:layout_marginTop="@dimen/px59"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>